Add search of polyA motifs

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ classifiers =
 [options]
 package_dir =
     = src
+package_data =
+    = assets/*.txt
 packages = dragibus
 python_requires = >=3.6
 
