--- a/setup.cfg
+++ b/setup.cfg
@@ -17,10 +17,11 @@ classifiers =
 [options]
 package_dir =
     = src
-package_data =
-    = assets/*.txt
 packages = dragibus
 python_requires = >=3.6
+
+[options.package_data]
+    * = assets/*.txt
 
 [options.packages.find]
 where = src
