--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,10 @@ package_dir =
     = src
 packages = dragibus
 python_requires = >=3.6
+install_requires = 
+    plotly
+    pybedtools
+    pandas
 
 [options.package_data]
     * = assets/*.txt
