Add one last dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     pybedtools
     pandas
     mdutils
+    importlib_resources
 
 [options.package_data]
     * = assets/*.txt
